Принимаем сообщения Delivery через Kafka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.show-sql=true
 url.food=http://localhost:8081/api/food/
 
 server.port=8080
+
+spring.kafka.consumer.group-id=app.1
+spring.kafka.bootstrap-servers=localhost:9092
